--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,7 @@
   text-align: center;
 }
 
-button {
-  border-radius: 0.5rem;
-  background-color: rgb(107, 107, 107);
-  color: black;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+ul {
+  list-style: none;
   font-weight: bold;
-  padding: 0.5rem;
-  margin: 5px;
-  width: 100px;
-  border: none;
-  color: white;
-}
-
-h2 {
-  font-size: 10rem;
-  margin-bottom: 10px;
 }
